# los-olivos-music

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  docker-compose.yml  pyproject.toml
config/: categories.yaml
docs/: architecture.md  flywheel.md  monetization.md  production_runbook.md  repetition_and_extension.md  research_decisions.md
examples/: assets_only.yaml  local_demo.yaml  mubert_playlist_1h.yaml  production_lofi_1h.yaml  production_lyria_1h.yaml
src/yt_music_factory/: __init__.py  analytics.py  asset_registry.py  asset_strategy.py  cli.py  config.py  ffmpeg.py  pipeline.py  prompt_safety.py  seo.py  storage.py  strategy_store.py  utils.py  youtube.py
src/yt_music_factory/providers/image/: __init__.py  base.py  gemini.py  local.py
src/yt_music_factory/providers/music/: __init__.py  base.py  elevenlabs.py  local.py  lyria.py  mubert.py
src/yt_music_factory/repetition/: __init__.py  validators.py
src/yt_music_factory/timeline/: __init__.py  planner.py
tests/: test_config_and_seo.py  test_cost_estimator.py  test_ffmpeg_extension.py  test_ffmpeg_manifests.py  test_flywheel_analytics.py  test_frontend_asset_strategy.py  test_gemini_image_provider.py  test_lyria_provider.py  test_pipeline_local.py  test_prompt_safety.py  test_repetition_validators.py  test_timeline_planner.py  test_youtube_config.py
webui/: requirements.txt  server.py
webui/static/: index.html
